# prometheus-alertmanager-to-anag-bridge

./: Cargo.toml  README.md  Tiltfile  patam.toml
deployment/: Dockerfile  alertmanager.yaml  bridge.yaml  prometheus.yaml
development/: README.md  hosts.json  services.json  tac.json
src/: alertmanager.rs  main.rs
