[package]
name = "patab"
version = "0.1.0"
authors = ["David Sauer <davedamoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.4.1"
env_logger = "0.8.2"
serde = "1.0.118"
http = "0.2.12"
thiserror = "1.0.22"
chrono = "0.4.19"
serde_urlencoded = "0.7.0"
percent-encoding = "2.1.0"
clap = "2.33.3"
config = "0.10"
